# pipefish

./: CMakeLists.txt
doc/: Install_and_quick_check.md
src/pipefish-gui/: CMakeLists.txt
